force-app/main/default/objects/Payment_Record__c/Payment_Record__c.object-meta.xml
<CustomObject>
    <label>Payment Record</label>
    <nameField>
        <displayFormat>PR-{0}</displayFormat>
        <label>Payment Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>