force-app/main/default/objects/Payment_Record__c/fields/Batched_Under_Warrant__c.field-meta.xml
<CustomField>
    <fullName>Batched_Under_Warrant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Wage_Payable_Balance, Wage_Interest_Payable_Balance, Penalty_Payable_Balance, and Interest_Other_Payable_Balance roll up summary fields on Payee__c. Populated by ?</description>
    <label>Batched Under Warrant</label>
    <type>Checkbox</type>
</CustomField>