force-app/main/default/objects/Payment_Record__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <formula>Payee__r.Case_Management__r.Case_Number__c</formula>
    <label>Case Number</label>
    <type>Text</type>
</CustomField>