force-app/main/default/objects/Payment_Record__c/fields/Liability_Payment__c.field-meta.xml
<CustomField>
    <fullName>Liability_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Liability Payment</label>
    <referenceTo>Liability_Payment__c</referenceTo>
    <relationshipLabel>Payment Records</relationshipLabel>
    <relationshipName>Payment_Records</relationshipName>
    <type>Lookup</type>
</CustomField>