force-app/main/default/objects/Payment_Record__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <label>Payee</label>
    <referenceTo>Payee__c</referenceTo>
    <relationshipLabel>Payment Records</relationshipLabel>
    <relationshipName>Payment_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>