force-app/main/default/objects/Payment_Record__c/fields/Payee_Name__c.field-meta.xml
<CustomField>
    <fullName>Payee_Name__c</fullName>
    <description>Populated by CashCreatePrsQable.cls from Payee__c.Payee_Name__c on Payment Record creation when posting Case Payments; or in some instances, by the ReturnedVoidedReceipt.cls when creating Buyback PRs. Used primarily for summing PRs under Payees on the UWF Schedule, and for some verifications during Case Payment posting.</description>
    <inlineHelpText>Used for summing PR amounts under Payees on the UWF Schedule.</inlineHelpText>
    <label>Payee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>