force-app/main/default/objects/Payment_Record__c/fields/Payment_Applied_To__c.field-meta.xml
<CustomField>
    <fullName>Payment_Applied_To__c</fullName>
    <description>Usually populated by CashCreatePRs.cls when a Case Payment is Posted. Also populated by ReturnedVoidedReceipt.cls, creating Buybacks when a RCT is Returned.</description>
    <label>Payment Applied To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attorney Fees</fullName>
            </value>
            <value>
                <fullName>Filing Fees</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Judgment Amount</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Penalties</fullName>
            </value>
            <value>
                <fullName>Post-Hearing Interest</fullName>
            </value>
            <value>
                <fullName>Post-Judgment Interest</fullName>
            </value>
            <value>
                <fullName>Refund Amount</fullName>
            </value>
            <value>
                <fullName>Wage Interest</fullName>
            </value>
            <value>
                <fullName>Wages</fullName>
            </value>
            <value>
                <fullName>Buyback</fullName>
            </value>
            <value>
                <fullName>Amounts Due to DIR</fullName>
            </value>
            <value>
                <fullName>DIR Attorney Fees</fullName>
                <isActive>false</isActive>
                <label>DIR Attorney Fees</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>