force-app/main/default/objects/Payment_Record__c/fields/Receipt_Hold_Date_New__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Hold_Date_New__c</fullName>
    <description>Populated by CashCreatePRs.cls</description>
    <label>Receipt Hold Date</label>
    <type>Date</type>
</CustomField>