force-app/main/default/objects/Payment_Record__c/fields/Recycled_Funds__c.field-meta.xml
<CustomField>
    <fullName>Recycled_Funds__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the funds on this PR have been disbursed previously, then returned. Opens this PR up for being "recycled" into a new disbursement.</description>
    <label>Recycled Funds</label>
    <type>Checkbox</type>
</CustomField>