force-app/main/default/objects/Payment_Record__c/fields/Returned_Voided_Payment_Record__c.field-meta.xml
<CustomField>
    <fullName>Returned_Voided_Payment_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Returned/Voided Payment Record</label>
    <referenceTo>Payment_Record__c</referenceTo>
    <relationshipLabel>Returned/Voided By</relationshipLabel>
    <relationshipName>Negating_Payment_Records</relationshipName>
    <type>Lookup</type>
</CustomField>