force-app/main/default/objects/Payment_Record__c/fields/UWF_Payee__c.field-meta.xml
<CustomField>
    <fullName>UWF_Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For UWF warrants</description>
    <label>UWF Payee</label>
    <referenceTo>Payee__c</referenceTo>
    <relationshipLabel>Payment Records (UWF Payee)</relationshipLabel>
    <relationshipName>Payment_Records_UWF</relationshipName>
    <type>Lookup</type>
</CustomField>