force-app/main/default/objects/Payment_Record__c/fields/UWF_Payee_Name__c.field-meta.xml
<CustomField>
    <fullName>UWF_Payee_Name__c</fullName>
    <description>Get the Payee name of the Secorndary Payee</description>
    <formula>UWF_Payee__r.Payee_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UWF Payee Name</label>
    <type>Text</type>
</CustomField>