force-app/main/default/objects/Payment_Record__c/fields/Warrant__c.field-meta.xml
<CustomField>
    <fullName>Warrant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warrant</label>
    <referenceTo>Warrant__c</referenceTo>
    <relationshipLabel>Payment Records</relationshipLabel>
    <relationshipName>Payment_Records</relationshipName>
    <type>Lookup</type>
</CustomField>