force-app/main/default/objects/Payment_Record__c/fields/Warrant_Issued__c.field-meta.xml
<CustomField>
    <fullName>Warrant_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for rollup summary on payees then to case. Populated by flow that when a warrant is associated with the payment and when the status of the warrant changes.</description>
    <label>Warrant Issued</label>
    <type>Checkbox</type>
</CustomField>