force-app/main/default/objects/Payment_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payee__c</columns>
    <columns>Warrant__c</columns>
    <columns>Warrant_Issued__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Payment_Applied_To__c</columns>
    <columns>Liability_Payment__c</columns>
    <columns>Judgment_Payment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>